--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
         "laravel/pint": "^1.0"
     },
     "require": {
+        "corals/utility-comment": "@dev",
+        "corals/utility-lov":"@dev",
+        "corals/utility-category":"@dev",
+        "corals/cms":"@dev"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
