--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
         "laravel/pint": "^1.0"
     },
     "require": {
-        "corals/utility-comment": "@dev",
-        "corals/utility-lov":"@dev",
-        "corals/utility-category":"@dev",
-        "corals/cms":"@dev"
+        "corals/utility-comment": "^1.0",
+        "corals/utility-lov":"^1.0",
+        "corals/utility-category":"^1.0",
+        "corals/cms":"^1.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
